--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -52,3 +52,9 @@ EventLevelDone=behaviors.EventLevelDone
 EventChangeBlood=behaviors.EventChangeBlood
 EventChangeLive=behaviors.EventChangeLive
 EventLoseGame=behaviors.EventLostGame
+#
+# Input Key Methods
+#
+LifeIncrease=behaviors.KeyLiveIncrease
+GameOver=behaviors.KeyGameOver
+LevelDone=behaviors.KeyLevelDone
