--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -6,7 +6,7 @@ RegularRemove=behaviors.Remove
 #
 # Ways of Move
 #
-CanNotMove=behaviors.Immobile
+Immobile=behaviors.Immobile
 RegularMove=behaviors.Move
 BackForthMove=behaviors.BackForthMove
 BackForthMoveWithVerticalSpeed=behaviors.BackForthMoveWithVerticalSpeed
