--- a/src/engineResources/BehaviorMethod.properties
+++ b/src/engineResources/BehaviorMethod.properties
@@ -6,7 +6,7 @@ RegularRemove=die
 #
 # Ways of Move
 #
-CanNotMove=move
+Immobile=move
 RegularMove=move
 BackForthMove=move
 BackForthMoveWithVerticalSpeed=move
