--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -24,7 +24,7 @@ BackForthMoveWithVerticalSpeed=StringToken,DoubleToken,IntegerToken,DoubleToken
 Jump=StringToken,StringToken,IntegerToken,IntegerToken
 FDMove=StringToken,StringToken,IntegerToken,IntegerToken
 BKMove=StringToken,StringToken,IntegerToken,IntegerToken
-SlowShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken,IntegerToken
+SlowShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
 SpreadShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken,IntegerToken
 QuickShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
 JumpByTime=StringToken,DoubleToken,IntegerToken,IntegerToken
