--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -87,7 +87,7 @@ TriggerByRemove=StringToken,IntegerToken
 TriggerByCollision=StringToken,IntegerToken,IntegerToken
 TriggerByTileCollision=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 EventLevelDone=StringToken
-EventEnemyShower=StringToken,IntegerToken,IntegerToken,IntegerToken
+EventEnemyShower=StringToken,IntegerToken,StringToken
 EventChangeBlood=StringToken,IntegerToken,IntegerToken
 EventChangeLive=StringToken,IntegerToken,IntegerToken
 EventLoseGame=StringToken
