--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -53,6 +53,7 @@ EventLevelDone=behaviors.EventLevelDone
 EventChangeBlood=behaviors.EventChangeBlood
 EventChangeLive=behaviors.EventChangeLive
 EventLoseGame=behaviors.EventLostGame
+EventSwitchScene=behaviors.EventSwitchScene
 #
 # Input Key Methods
 #
