--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -90,6 +90,7 @@ EventLevelDone=StringToken
 EventEnemyShower=StringToken,IntegerToken,StringToken
 EventChangeBlood=StringToken,IntegerToken,IntegerToken
 EventChangeLive=StringToken,IntegerToken,IntegerToken
+EventSwitchScene=StringToken,IntegerToken,DoubleToken,DoubleToken
 EventLoseGame=StringToken
 #
 # Managers
