--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -3,6 +3,7 @@
 #OneStep Engine Reflect without ID as first parameter
 SwitchSceneToNewLevelID=switchSceneToLevel
 SetName=setName
+ViewOffset=setViewOffset
 #Transition State
 TSBackground=setBackground
 Frame=setFrame
