--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -16,6 +16,7 @@ Frame=IntegerToken
 DisplayMessage=StringToken,IntegerToken,IntegerToken
 DisplayImage=StringToken,IntegerToken,IntegerToken
 #
+ViewOffset=IntegerToken,IntegerToken
 SwitchSceneToNewLevelID=IntegerToken,IntegerToken,IntegerToken
 SetName=StringToken
 #Actors and Players
