--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -52,7 +52,7 @@ EventEnemyShower=behaviors.EventEnemyShower
 EventLevelDone=behaviors.EventLevelDone
 EventChangeBlood=behaviors.EventChangeBlood
 EventChangeLive=behaviors.EventChangeLive
-EventLoseGame=behaviors.EventLostGame
+EventLoseGame=behaviors.EventLoseGame
 EventSwitchScene=behaviors.EventSwitchScene
 #
 # Input Key Methods
