--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -42,7 +42,7 @@ SpreadShootByTime=behaviors.SpreadShootByTime
 # Ways to trigger events
 #
 TriggerByTime=behaviors.TriggerByTime
-TriggerByCollision=behaviors.TriggerByCollision
+TriggerByCollision=behaviors.TriggerByRemove
 TriggerByEnterTile=behaviors.TriggerByEnterTile
 TriggerByRemove=behaviors.TriggerByRemove
 #
