--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -43,6 +43,7 @@ SpreadShootByTime=behaviors.SpreadShootByTime
 #
 TriggerByTime=behaviors.TriggerByTime
 TriggerByCollision=behaviors.TriggerByRemove
+TriggerByTileCollision=behaviors.TriggerByRemove
 TriggerByEnterTile=behaviors.TriggerByEnterTile
 TriggerByRemove=behaviors.TriggerByRemove
 #
