add more comments and reduce duplicated code

--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -17,7 +17,7 @@ BackForthMoveWithVerticalSpeed=behaviors.BackForthMoveWithVerticalSpeed
 HitterEliminateVictim=behaviors.Eliminate
 PerishTogether=behaviors.PerishTogether
 StayOnObject=behaviors.StayOnObject
-Rebounce=behaviors.Rebounce
+Rebound=behaviors.Rebound
 ShootHitObject=behaviors.ShootHitObject
 #
 # Ways of Jump
